--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@tanstack/vue-query": "^5.24.1",
     "@vee-validate/i18n": "^4.12.2",
     "@vee-validate/nuxt": "^4.12.2",
     "@vee-validate/rules": "^4.12.2",
+    "@wagmi/connectors": "^4.1.14",
+    "@wagmi/core": "^2.6.5",
+    "@web3modal/wagmi": "^4.0.10",
     "ant-design-vue": "^4.0.7",
     "axios": "^1.6.2",
     "nuxt-render-on-scroll": "^1.1.0",
     "nuxt3-vuex-module": "^1.0.14",
+    "use-wagmi": "^1.3.5",
+    "viem": "^2.7.14",
     "vuex": "^4.0.2"
   }
 }
